# blender-mcp

./: .gitignore  ADDON_UPDATE_SUMMARY.md  AGENTS.md  ENTERPRISE_UPGRADE_SUMMARY.md  EXECUTE_IN_BLENDER.py  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INSTALLATION_GUIDE.md  README.md  README_STUDIO.md  TESTING.md  TESTING_STATUS.md  TODO.md  UPDATE_SUMMARY.md  UPGRADE_GUIDE.md  addon.py  opencode.json  pyproject.toml  reload_addon.py  spice_market_direct.py  spice_market_scene.py  studio_config.toml  test_connection.py  test_connection_fix.py  test_debug.py  test_individual.py  test_mcp_comprehensive.py  test_mcp_fast.py  test_mcp_tools.py
.cursor/: rules
.github/: copilot-instructions.md
.serena/: project.yml
archive/: INSTALLATION_GUIDE.md  README.md  addon.py  pyproject.toml
blender_mcp_addon/: __init__.py  command_registry.py  protocol.py  server.py  ui.py  utils.py
docs/: AGENT_PLAYBOOK.md  API_REFERENCE.md  LOCAL_MODEL_SETUP.md  NEXTJS_EXPORT.md  PROTOCOL.md  README.md  USER_GUIDE.md
scripts/: build_addon_zip.py  bundle_addon.py  generate_skill_manifest.py
skills/: blender_mcp.json  blender_mcp_client.py
tests/: conftest.py  test_addon_camera_handler.py  test_addon_composition_handler.py  test_addon_fallback_composition.py  test_addon_job_dispatch.py  test_addon_jobs_handlers.py  test_addon_lighting_handler.py  test_addon_materials_handler.py  test_camera.py  test_composition.py  test_jobs.py  test_lighting.py  test_logging_config.py  test_materials.py  test_mcp_completions.py  test_mcp_resources.py  test_pipeline_entities.py  test_pipeline_storage.py  (+6 more)
(+115 files in other folders)
