[project]
name = "blender-mcp"
version = "1.5.5"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Siddharth Ahuja", email = "siddharthahuja@users.noreply.github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "supabase>=2.0.0",
    "tenacity>=8.2.0",
    "tomli>=2.0.0",
    "pyparsing<3.1,>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"
bundle-addon = "scripts.bundle_addon:bundle_addon"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/ahujasid/blender-mcp"
"Bug Tracker" = "https://github.com/ahujasid/blender-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blender_mcp*"]

[tool.setuptools.package-data]
blender_mcp = ["assets/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
